load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/ggeorgiev/instant-chess/src",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "instant-chess",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
