load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "alignment",
    srcs = [
        "alignment.go",
        "block_releation_bitboard.go",
        "block_releation_bitboard_helper.go",
        "relation.go",
        "relation_helper.go",
        "vector.go",
        "vector_helper.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/alignment",
    visibility = ["//visibility:public"],
    deps = [
        "//src/attack",
        "//src/bitboard",
        "//src/square",
    ],
)

go_test(
    name = "alignment_test",
    srcs = [
        "block_releation_bitboard_test.go",
        "releation_test.go",
        "vector_test.go",
    ],
    embed = [":alignment"],
    deps = [
        "//src/square",
        "@com_github_stretchr_testify//assert",
    ],
)
