load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//bzl:color_template.bzl", "generate_black")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

generate_black(
    names = [
        "matrix_square_under_attack_white",
        "matrix_check_white",
        "matrix_peace_moves_white",
        "matrix_moves_white",
        "state_half_moves_white",
    ],
)

go_library(
    name = "board",
    srcs = [
        "matrix.go",
        "matrix_check_black.go",
        "matrix_check_white.go",
        "matrix_moves_black.go",
        "matrix_moves_white.go",
        "matrix_peace_moves_black.go",
        "matrix_peace_moves_white.go",
        "matrix_square_under_attack.go",
        "matrix_square_under_attack_black.go",
        "matrix_square_under_attack_white.go",
        "rights.go",
        "state.go",
        "state_half_moves.go",
        "state_half_moves_black.go",
        "state_half_moves_white.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/board",
    visibility = ["//visibility:public"],
    deps = [
        "//src/peace",
        "//src/peacealignment",
        "//src/peaceattacks",
        "//src/peacemoves",
        "//src/square",
        "//src/util",
    ],
)

go_test(
    name = "board_test",
    srcs = [
        "matrix_check_benchmark_test.go",
        "matrix_moves_test.go",
        "matrix_square_under_attack_benchmark_test.go",
        "rights_test.go",
        "state_test.go",
    ],
    embed = [":board"],
    deps = [
        "//src/peacemoves",
        "//src/square",
        "@com_github_stretchr_testify//assert",
    ],
)
