load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chess",
    srcs = [
        "board.go",
        "generator.go",
        "position.go",
        "result.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/chess",
    visibility = ["//visibility:public"],
    deps = [
        "//src/bitboard",
        "//src/board",
        "//src/math",
        "//src/move",
        "//src/peace",
        "//src/square",
        "//src/util",
    ],
)

go_test(
    name = "chess_test",
    size = "large",
    srcs = [
        "board_move_benchmark_test.go",
        "board_move_test.go",
        "board_square_under_attack_test.go",
        "generator_test.go",
        "move_test.go",
        "position_peaces_count_test.go",
        "position_test.go",
        "position_valid_black_king_under_attack_test.go",
        "position_valid_kings_test.go",
    ],
    embed = [":chess"],
    deps = [
        "//src/peace",
        "//src/square",
        "@com_github_stretchr_testify//assert",
    ],
)
