load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chess",
    srcs = [
        "generator.go",
        "position.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/chess",
    visibility = ["//visibility:public"],
    deps = [
        "//src/bitboard",
        "//src/board/matrix",
        "//src/board/state",
        "//src/math",
        "//src/peace",
        "//src/square",
        "//src/util",
    ],
)

go_test(
    name = "chess_test",
    srcs = [
        "generator_test.go",
        "position_test.go",
        "position_valid_black_king_under_attack_test.go",
        "position_valid_kings_test.go",
    ],
    embed = [":chess"],
    deps = ["@com_github_stretchr_testify//assert"],
)
