load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "move",
    srcs = ["rights.go"],
    importpath = "github.com/ggeorgiev/instant-chess/src/move",
    visibility = ["//visibility:public"],
    deps = [
        "//src/square",
        "//src/util",
    ],
)

go_test(
    name = "move_test",
    srcs = ["rights_test.go"],
    embed = [":move"],
    deps = ["@com_github_stretchr_testify//assert"],
)
