load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "peace",
    srcs = [
        "code.go",
        "code_list.go",
        "color.go",
        "kind.go",
        "permutation.go",
        "rights.go",
        "rights_helper.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/peace",
    visibility = ["//visibility:public"],
    deps = [
        "//src/move",
        "//src/place",
        "//src/square",
        "//src/util",
    ],
)

go_test(
    name = "peace_test",
    srcs = [
        "code_benchmark_test.go",
        "code_list_test.go",
        "code_test.go",
        "color_test.go",
        "kind_test.go",
        "permutation_test.go",
        "rights_test.go",
    ],
    embed = [":peace"],
    deps = [
        "//src/square",
        "@com_github_stretchr_testify//assert",
    ],
)
