load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "peaceattacks",
    srcs = [
        "king.go",
        "king_helper.go",
        "knight.go",
        "knight_helper.go",
        "pawn.go",
        "pawn_helper.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/peaceattacks",
    visibility = ["//visibility:public"],
    deps = [
        "//src/bitboard",
        "//src/peacemoves",
        "//src/square",
    ],
)

go_test(
    name = "peaceattacks_test",
    srcs = [
        "king_test.go",
        "knight_test.go",
        "pawn_test.go",
    ],
    embed = [":peaceattacks"],
    deps = ["@com_github_stretchr_testify//assert"],
)
