load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "peaceattacks",
    srcs = [
        "diagonal.go",
        "diagonal_helper.go",
        "direct.go",
        "direct_helper.go",
        "king.go",
        "king_helper.go",
        "knight.go",
        "knight_helper.go",
        "linear.go",
        "linear_helper.go",
        "pawn.go",
        "pawn_helper.go",
        "peace.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/peaceattacks",
    visibility = ["//visibility:public"],
    deps = [
        "//src/bitboard",
        "//src/move",
        "//src/peace",
        "//src/square",
    ],
)

go_test(
    name = "peaceattacks_test",
    srcs = [
        "diagonal_test.go",
        "direct_test.go",
        "king_test.go",
        "knight_test.go",
        "linear_test.go",
        "pawn_test.go",
    ],
    embed = [":peaceattacks"],
    deps = [
        "//src/peace",
        "//src/square",
        "@com_github_stretchr_testify//assert",
    ],
)
