load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "peacemoves",
    srcs = [
        "king.go",
        "king_helper.go",
        "knight.go",
        "knight_helper.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/peacemoves",
    visibility = ["//visibility:public"],
    deps = ["//src/square"],
)

go_test(
    name = "peacemoves_test",
    srcs = [
        "king_test.go",
        "knight_test.go",
    ],
    embed = [":peacemoves"],
    deps = ["@com_github_stretchr_testify//assert"],
)
