load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "square",
    srcs = [
        "bitboard.go",
        "square.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/square",
    visibility = ["//visibility:public"],
    deps = ["//src/bitboard"],
)

go_test(
    name = "square_test",
    srcs = [
        "bitboard_test.go",
        "square_test.go",
    ],
    embed = [":square"],
    deps = ["@com_github_stretchr_testify//assert"],
)
