load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "active.go",
        "map.go",
        "persisted.go",
        "types.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//src/peace",
        "@com_github_hashicorp_golang_lru_v2//:golang-lru",
    ],
)
