load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "active.go",
        "board_peaces.go",
        "data_block_cache.go",
        "map.go",
        "persisted.go",
        "persisted_cache.go",
        "types.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//src/peace",
        "@com_github_hashicorp_golang_lru_v2//:golang-lru",
    ],
)
