load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//bzl:color_template.bzl", "generate_black")

generate_black(
    names = [
        "state_half_moves_white",
        "state_move_white",
    ],
)

go_library(
    name = "state",
    srcs = [
        "identifier.go",
        "state.go",
        "state_half_moves_black.go",
        "state_half_moves_white.go",
        "state_move.go",
        "state_move_black.go",
        "state_move_white.go",
    ],
    importpath = "github.com/ggeorgiev/instant-chess/src/board/state",
    visibility = ["//visibility:public"],
    deps = [
        "//src/board/matrix",
        "//src/math",
        "//src/move",
        "//src/peace",
        "//src/place",
        "//src/square",
        "//src/storage",
    ],
)

go_test(
    name = "state_test",
    srcs = [
        "state_move_test.go",
        "state_test.go",
    ],
    embed = [":state"],
    deps = [
        "//src/move",
        "//src/place",
        "//src/square",
        "@com_github_stretchr_testify//assert",
    ],
)
